--- a/app/views/nav/index.html.erb
+++ b/app/views/nav/index.html.erb
@@ -1,16 +1,7 @@
-<div class="nav-bar pure-menu pure-menu-open pure-menu-horizontal">
-  <ul>
-    <a href="/">About Me
-    <a href="/resume">Resume
-    <a href="/blog">Blog
-    <a href="http://caseeee.imgur.com/">Photos</a>
-  </ul>
-</div>
-
 <div class="pure-g">
   <div class="pure-u-2-3">
     <h1>Welcome!</h1>
-    <p>My name is Casey. I'm a former middle school math teacher turned web developer. I love to learn. I love to solve problems. I love to make the world a better place. I know Ruby, Sinatra &amp; Rails, and some front-end HTML/CSS/JavaScript/jQuery.</p>
+    <p class="welcome">My name is Casey. I'm a former middle school math teacher turned web developer. I love to learn. I love to solve problems. I love to make the world a better place. I know Ruby, Sinatra &amp; Rails, and some front-end HTML/CSS/JavaScript/jQuery.</p>
     <div class="contact">
       <ul>
         <a href="mailto:cumbow8@gmail.com"><%= image_tag("email29.png") %></a>
